# Practices

./: README.md
10.Programming/002.DesignPatterns/: README.md
10.Programming/002.DesignPatterns/001.UnityExamples/: .gitignore  README.md
10.Programming/002.DesignPatterns/docs/: AbstractFactory.md  Adapter.md  Bridge.md  Builder.md  Bytecode.md  ChainOfResponsibility.md  Command.md  Component.md  Composite.md  DataLocality.md  Decorator.md  DependencyInjection.md  DirtyFlag.md  DoubleBuffer.md  EventQueue.md  Facade.md  FactoryMethod.md  Flyweight.md  GameLoop.md  Interpreter.md  Iteartor.md  Mediator.md  Memento.md  ObjectPool.md  Observer.md  Prototype.md  Proxy.md  ServiceLocator.md  Singleton.md  SpatialPartition.md  State.md  Strategy.md  SubclassSandbox.md  TemplateMethod.md  TypeObject.md  UpdateMethod.md  Visitor.md
20.DataStructure&Algorithm/: README.md
20.DataStructure&Algorithm/001.MultiLayerTimingWheel/: README.md
20.DataStructure&Algorithm/001.MultiLayerTimingWheel/ProjectSettings/: ProjectSettings.asset
30.ComputerGrpahics/001.TinyRenderer/: 001.TinyRenderer.sln  README.md
30.ComputerGrpahics/001.TinyRenderer/TinyRenderer-Common/: TinyRenderer-Common.vcxproj  TinyRenderer-Common.vcxproj.filters
30.ComputerGrpahics/001.TinyRenderer/TinyRenderer-Lesson0/: TinyRenderer-Lesson0.vcxproj  TinyRenderer-Lesson0.vcxproj.filters  main.cpp
30.ComputerGrpahics/001.TinyRenderer/TinyRenderer-Lesson1/: TinyRenderer-Lesson1.vcxproj  main.cpp
30.ComputerGrpahics/001.TinyRenderer/TinyRenderer-Lesson2/: TinyRenderer-Lesson2.vcxproj  main.cpp
30.ComputerGrpahics/001.TinyRenderer/TinyRenderer-Lesson3/: TinyRenderer-Lesson3.vcxproj  main.cpp
30.ComputerGrpahics/001.TinyRenderer/TinyRenderer-Lesson4/: TinyRenderer-Lesson4.vcxproj  main.cpp
30.ComputerGrpahics/001.TinyRenderer/TinyRenderer-Lesson5/: TinyRenderer-Lesson5.vcxproj  main.cpp
30.ComputerGrpahics/001.TinyRenderer/TinyRenderer-Lesson6/: TinyRenderer-Lesson6.vcxproj  main.cpp
30.ComputerGrpahics/001.TinyRenderer/TinyRenderer-Lesson7/: TinyRenderer-Lesson7.vcxproj  main.cpp
30.ComputerGrpahics/001.TinyRenderer/TinyRenderer-Lesson8/: TinyRenderer-Lesson8.vcxproj  main.cpp
30.ComputerGrpahics/001.TinyRenderer/TinyRenderer-Lesson9/: main.cpp  (+1 more)
30.ComputerGrpahics/002.FourierTransformation/: .gitignore  002.FourierTransformation.sln  README.md
30.ComputerGrpahics/003.01.GAMES101/: .gitignore
30.ComputerGrpahics/003.01.GAMES101/Homework_00/: CMakeLists.txt
30.ComputerGrpahics/003.01.GAMES101/Homework_03/: CMakeLists.txt  Texture.hpp
30.ComputerGrpahics/003.01.GAMES101/Homework_04/: CMakeLists.txt
30.ComputerGrpahics/003.01.GAMES101/Homework_06/: Bounds3.hpp  CMakeLists.txt  main.cpp
30.ComputerGrpahics/003.GAMES101/: README.md
30.ComputerGrpahics/003.GAMES101/Homework_07/: Bounds3.hpp  CMakeLists.txt  Renderer.cpp  Triangle.hpp  main.cpp
30.ComputerGrpahics/004.RayTracingInOneWeekend/: .gitignore  README.md
(+371 files in other folders)
